The documentation has been updated

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -79,7 +79,7 @@
       </li>
       <li><a href="#mozTocId1450">Part 7. Misc</a>
         <ol>
-          <li><a href="#mozTocId109433">Chapter 1. The filesystem</a></li>
+          <li><a href="#mozTocId109433">Chapter 1. The Filesystem</a></li>
           <li><a href="#mozTocId260090">Chapter 2. A tool</a></li>
           <li><a href="#mozTocId256993">Chapter 3. The resource manager</a></li>
         </ol>
@@ -126,7 +126,7 @@
       Windows? You need a good game engine to do it. I made my own engine. I
       hope that my C++ game engine will be useful for many programmers.<br>
       <br>
-      <u>Features</u><br>
+      <u>Features.</u><br>
       <br>
       Let me show you the engine features. Let's go.<br>
       <br>
@@ -142,7 +142,7 @@
           file. The engine is just the source code files.</big></li>
     </ul>
     <big><u><br>
-        Installation</u><br>
+        Installation.</u><br>
       <br>
       How to install this engine? Follow these steps:<br>
       <br>
@@ -253,7 +253,7 @@
     <h2><a id="mozTocId246473" class="mozTocH2"></a><big>Chapter 5. The
         troubleshooting guide</big></h2>
     <big><br>
-      You need <a href="https://support.microsoft.com/en-us/help/2977003/the-latest-supported-visual-c-downloads">Visual
+      You need <a href="https://learn.microsoft.com/en-us/cpp/windows/latest-supported-vc-redist?view=msvc-170">Visual
         C++ Redistributable</a> packages if your game code is compiled under
       Visual C++.<br>
     </big>
@@ -410,7 +410,7 @@
       <br>
       <u>The FPS limitation.</u><br>
       <br>
-      FPS is an important thing. Many FPS are needed for good animation, but it
+      FPS is an important thing. Many FPS are needed for a good animation, but it
       also needs high processor usage. The FPS limit is 60 by default. It has an
       ideal value.<br>
       <br>
@@ -705,7 +705,7 @@
       <u>A background texture</u><br>
       <br>
       The background doesn't draw if the background texture doesn't exist. It
-      will automatically be created when you load an image.<br>
+      will be automatically created when you load an image.<br>
       <br>
       Important notice<br>
       <br>
@@ -774,7 +774,7 @@
       <u>A background texture</u><br>
       <br>
       The background doesn't draw if the background texture doesn't exist. It
-      will automatically be created when you load an image.<br>
+      will be automatically created when you load an image.<br>
       <br>
       <u>Important notice</u><br>
       <br>
@@ -863,7 +863,7 @@
         A background texture.</u><br>
       <br>
       The background doesn't draw if the background texture doesn't exist. It
-      will automatically be created when you load an image.<br>
+      will be automatically created when you load an image.<br>
       <br>
       <u>An important notice.</u><br>
       <br>
@@ -1161,7 +1161,7 @@
       <u>A sprite sheet texture.</u><br>
       <br>
       A sprite sheet doesn't draw if the sprite sheet texture doesn't exist. It
-      will automatically be created when you load a sheet.<br>
+      will be automatically created when you load a sheet.<br>
     </big>
     <h2><a id="mozTocId292221" class="mozTocH2"></a><big>Chapter 14. The text</big></h2>
     <big><br>
@@ -1750,7 +1750,7 @@
       <br>
       <u>Working with the audio.</u><br>
       <br>
-      Just use the <i>Audio</i> class to work with audio. Let's look at the
+      Just use the <i>Audio</i> class to work with the audio. Let's look at the
       publicly available methods.<br>
       <br>
       <i>void Audio::initialize(); -</i> Initialize the subsystem.<br>
@@ -1775,7 +1775,7 @@
     </big>
     <h1><a id="mozTocId1450" class="mozTocH1"></a><big>Part 7. Misc</big></h1>
     <h2><a id="mozTocId109433" class="mozTocH2"></a><big>Chapter 1. The
-        filesystem</big></h2>
+        Filesystem</big></h2>
     <big><br>
       This module is implemented as two simple functions. All these functions
       are declared in the <i>Filesystem</i> sub-namespace.<br>
@@ -1817,15 +1817,15 @@
       resource manager is implemented as a few template functions. All these
       functions are declared in the <i>Resource</i> sub-namespace.<br>
       <br>
-      <i>create</i> create a resource. The first form of this function creates a
+      <i>create</i>: Create a resource. The first form of this function creates a
       single resource. It takes a handle to a resource handle as an argument.
       The second form creates an array of the resources. It takes a handle to a
       resource handle and a resource amount.<br>
       <br>
-      <i>destroy</i> delete a resource if it already exists. This function takes
+      <i>destroy</i>: Delete a resource if it already exists. This function takes
       a resource handle as an argument.<br>
       <br>
-      <i>destroy_array</i> deletes the resource array if it already exists. This
+      <i>destroy_array</i>: Deletes the resource array if it already exists. This
       function takes a resource array handle as an argument.<br>
     </big>
     <h1><a id="mozTocId181875" class="mozTocH1"></a><big>Part 8. The binary
@@ -1911,7 +1911,7 @@
     </big>
     <h2><a id="mozTocId190470" class="mozTocH2"></a><big>Chapter 2. The keyboard</big></h2>
     <big><u><br>
-        The low–level input.</u><br>
+        The low-level input.</u><br>
       <br>
       Any keyboard has a built-in chip. It generates a special code when the
       user presses or releases the key. This code is called a «scan code».<br>
@@ -1937,7 +1937,7 @@
       <br>
       <u>The list of the supported scan codes</u><br>
       <br>
-      You can see a list of scan codes below.<br>
+      You can see a list of the scan codes below.<br>
       <br>
     </big>
     <table border="1">
@@ -2265,9 +2265,9 @@
       The ordinary button codes look like predefined constants. The first button
       is <i>GAMEPAD_BUTTON1</i>. The last button is <i>GAMEPAD_BUTTON32</i>.<br>
       <br>
-      <u>The D-Pad button codes.</u><br>
+      <u>The D-pad button codes.</u><br>
       <br>
-      The D-Pad button codes look like the predefined constants. You can see it
+      The D-pad button codes look like the predefined constants. You can see it
       below.<br>
       <br>
     </big>
@@ -2275,43 +2275,43 @@
       <tbody>
         <tr>
           <td><big>D-pad button code</big></td>
-          <td><big>D-Pad button</big></td>
+          <td><big>D-pad button</big></td>
         </tr>
         <tr>
           <td><big>GAMEPAD_NONE</big></td>
-          <td><big>None of the D-Pad buttons are pressed or held down.</big></td>
+          <td><big>None of the D-pad buttons are pressed or held down.</big></td>
         </tr>
         <tr>
           <td><big>GAMEPAD_UP</big></td>
-          <td><big>D-Pad up</big></td>
+          <td><big>D-pad up</big></td>
         </tr>
         <tr>
           <td><big>GAMEPAD_DOWN</big></td>
-          <td><big>D-Pad down</big></td>
+          <td><big>D-pad down</big></td>
         </tr>
         <tr>
           <td><big>GAMEPAD_LEFT</big></td>
-          <td><big>D-Pad left</big></td>
+          <td><big>D-pad left</big></td>
         </tr>
         <tr>
           <td><big>GAMEPAD_RIGHT</big></td>
-          <td><big>D-Pad right</big></td>
+          <td><big>D-pad right</big></td>
         </tr>
         <tr>
           <td><big>GAMEPAD_UPLEFT</big></td>
-          <td><big>Both D-Pad up and D-Pad left</big></td>
+          <td><big>Both D-pad up and D-pad left</big></td>
         </tr>
         <tr>
           <td><big>GAMEPAD_UPRIGHT</big></td>
-          <td><big>Both D-Pad up and D-Pad right</big></td>
+          <td><big>Both D-pad up and D-pad right</big></td>
         </tr>
         <tr>
           <td><big>GAMEPAD_DOWNLEFT</big></td>
-          <td><big>Both D-Pad down and D-Pad left</big></td>
+          <td><big>Both D-pad down and D-pad left</big></td>
         </tr>
         <tr>
           <td><big>GAMEPAD_DOWNRIGHT</big></td>
-          <td><big>Both D-Pad down and D-Pad right</big></td>
+          <td><big>Both D-pad down and D-pad right</big></td>
         </tr>
       </tbody>
     </table>
@@ -2376,7 +2376,7 @@
       the publicly available methods.<br>
       <br>
       <i>unsigned int Gamepad::get_amount(); -</i> Return the number of
-      connected gamepads.<br>
+      the connected gamepads.<br>
       <i><br>
         unsigned int Gamepad::get_button_amount() const; -</i> Return the number
       of the gamepad buttons.<br>
@@ -2390,7 +2390,7 @@
       current active gamepad.<br>
       <br>
       <i>EUGENEGDK::GAMEPAD_DPAD Gamepad::get_dpad() const; -</i> Return the
-      code of the pressed or held D-Pad button.<br>
+      code of the pressed or held D-pad button.<br>
       <i><br>
         bool Gamepad::check_hold(const EUGENEGDK::GAMEPAD_BUTTONS button) const;
         -</i> Return true if the button is pressed or held.<br>
@@ -2508,7 +2508,7 @@
       <br>
       <u>The internal key state.</u><br>
       <br>
-      The internal states of keyboard keys and mouse buttons look like the
+      The internal state of a key looks like the
       predefined constants. You can see it below.<br>
       <br>
     </big>
@@ -2590,7 +2590,7 @@
       1.6: The gamepad support has improved.<br>
       1.6.1: The small bug in the gamepad subsystem has been fixed.<br>
       1.6.2: The small changes.<br>
-      1.6.3: The file system subsystem has improved.<br>
+      1.6.3: The Filesystem subsystem has improved.<br>
       1.6.4-1.6.5: The small changes.<br>
       1.6.6: The base graphics subsystem has improved.<br>
       1.6.7: The small changes.<br>
@@ -3071,6 +3071,7 @@
       9.6.9.5: The project files are updated.<br>
       9.6.9.6: The documentation has been updated.<br>
       9.7: The text printing subsystem has improved.<br>
+      9.7.0.1-9.7.0.2: The documentation has been updated.<br>
     </big>
   </body>
 </html>
