The documentation has been updated

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -62,7 +62,7 @@
         <ol>
           <li><a href="#mozTocId633183">Chapter 1. The sub-namespace</a></li>
           <li><a href="#mozTocId673941">Chapter 2. The abnormal program termination</a></li>
-          <li><a href="#mozTocId284221">Chapter 3. The timer</a></li>
+          <li><a href="#mozTocId284221">Chapter 3. The timers</a></li>
           <li><a href="#mozTocId674703">Chapter 4. The collision detector</a></li>
           <li><a href="#mozTocId560876">Chapter 5. The tilemaps</a></li>
         </ol>
@@ -281,9 +281,9 @@
     </ul>
     <h2><a id="mozTocId250267" class="mozTocH2"></a><big>Chapter 7. The platform-specific notes</big></h2>
     <big><u><br>
-        The old processors support.<br>
+        The old processor support.<br>
       </u><br>
-      You need one of the following compilers for the old processors support:<br>
+      You need one of the following compilers for the old processor support:<br>
       <br>
     </big>
     <ul>
@@ -1323,7 +1323,7 @@
         void EUGENEGDK::Halt(const char *message); -</i> Terminate the program.
       Write an error message to the log file if logging is enabled.<br>
     </big>
-    <h2><a id="mozTocId284221" class="mozTocH2"></a><big>Chapter 3. The timer</big></h2>
+    <h2><a id="mozTocId284221" class="mozTocH2"></a><big>Chapter 3. The timers</big></h2>
     <big><br>
       A timer is a very useful thing. Just use the <i>Timer</i> class to work
       with the timer. Let's look at the publicly available methods.<br>
@@ -2720,7 +2720,7 @@
       9.6.9.5: The project files are updated.<br>
       9.6.9.6: The documentation has been updated.<br>
       9.7: The text printing subsystem has improved.<br>
-      9.7.0.1-9.7.0.4: The documentation has been updated.<br>
+      9.7.0.1-9.7.0.5: The documentation has been updated.<br>
     </big>
   </body>
 </html>
