--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2724,6 +2724,7 @@
    9.7.3: The sprite subsystem has improved.<br>
    9.7.4: The background subsystem has improved.<br>
    9.7.5: The text printing subsystem has improved.<br>
+   9.7.6: The rendering performance has increased.<br>
   </big>
  </body>
 </html>
