The ordinary background subsystem has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -576,7 +576,7 @@
    <i>void Background::complex_mirror(); -</i> Set both the horizontal
    background mirroring mode and the vertical background mirroring mode.<br>
    <br>
-   <i>void Background::set_target(const unsigned int target); -</i> Set the target frame.<br>
+   <i>unsigned int Background::set_target(const unsigned int target); -</i> Set the target frame and return it.<br>
    <br>
    <i>void Background::step(); -</i> Increase the target frame. Set it to 1 if the target is more than the number of frames.<br>
    <br>
@@ -2651,6 +2651,7 @@
    9.7.6: The rendering performance has increased.<br>
    9.7.6.1: The documentation has been updated.<br>
    9.7.7: The sprite subsystem has improved.<br>
+   9.7.8: The ordinary background subsystem has improved.<br>
   </big>
  </body>
 </html>
