The base sprite subsystem has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -820,6 +820,12 @@
    <br>
    <i>void Billboard::complex_mirror(); -</i> Set both the horizontal sprite
    mirroring mode and the vertical sprite mirroring mode.<br>
+   <br>   
+   <i>bool Billboard::is_horizontally_mirrored(); -</i> Return true if the sprite is horizontally mirrored.<br>
+   <br>
+   <i>bool Billboard::is_vertically_mirrored(); -</i> Return true if the sprite is vertically mirrored.<br>
+   <br>
+   <i>bool Billboard::is_complex_mirrored(); -</i> Return true if the sprite is both horizontally and vertically mirrored.<br>
    <br>
    <i>void Billboard::go_start(); -</i> Set the sprite position to the start position.<br>
    <br>
@@ -2652,6 +2658,8 @@
    9.7.6.1: The documentation has been updated.<br>
    9.7.7: The sprite subsystem has improved.<br>
    9.7.8: The ordinary background subsystem has improved.<br>
+   9.7.9-9.8: The small changes.<br>
+   9.8.1: The base sprite subsystem has improved.<br>
   </big>
  </body>
 </html>
