--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -658,6 +658,12 @@
    <i>void Scene::complex_mirror(); -</i> Set both the horizontal background
    mirroring mode and the vertical background mirroring mode.<br>
    <br>
+   <i>bool Scene::is_horizontally_mirrored(); -</i> Return true if the background is horizontally mirrored.<br>
+   <br>
+   <i>bool Scene::is_vertically_mirrored(); -</i> Return true if the background is vertically mirrored.<br>
+   <br>
+   <i>bool Scene::is_complex_mirrored(); -</i> Return true if the background is both horizontally and vertically mirrored.<br>
+   <br>
    <i>bool Scene::load(Image *background); -</i> Load a background from the buffer and return true if it is loaded.<br>
    <br>
    <i>bool Scene::load(Image &amp; background); -</i> Load a background from the buffer and return true if it is loaded.<br>
@@ -2667,6 +2673,7 @@
    9.7.9-9.8: The small changes.<br>
    9.8.1: The base sprite subsystem has improved.<br>
    9.8.2: The ordinary background subsystem has improved.<br>
+   9.8.3: The static background subsystem has improved.<br>
   </big>
  </body>
 </html>
