The small changes

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -844,7 +844,9 @@
    <i>bool Billboard::is_vertically_mirrored(); -</i> Return true if the sprite is vertically mirrored.<br>
    <br>
    <i>bool Billboard::is_complex_mirrored(); -</i> Return true if the sprite is both horizontally and vertically mirrored.<br>
-   <br>
+   <br>   
+   <i>bool Billboard::is_mirrored(); -</i> Return true if the sprite is mirrored in any way.<br>
+   <br>   
    <i>void Billboard::go_start(); -</i> Set the sprite position to the start position.<br>
    <br>
    <i>void Billboard::go_start_x(); -</i> Set the x-coordinate of the sprite position to the x-coordinate of the start position.<br>
@@ -2681,6 +2683,8 @@
    9.8.2: The ordinary background subsystem has improved.<br>
    9.8.3: The static background subsystem has improved.<br>
    9.8.4: The parallax background subsystem has improved.<br>
+   9.8.5: The base sprite subsystem has improved.<br>
+   9.8.6: The small changes.<br>
   </big>
  </body>
 </html>
