--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2684,7 +2684,7 @@
    9.8.3: The static background subsystem has improved.<br>
    9.8.4: The parallax background subsystem has improved.<br>
    9.8.5: The base sprite subsystem has improved.<br>
-   9.8.6: The small changes.<br>
+   9.8.6-9.8.7: The small changes.<br>
   </big>
  </body>
 </html>
