The ordinary background subsystem has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -580,7 +580,9 @@
    <br>
    <i>bool Background::is_vertically_mirrored(); -</i> Return true if the background is vertically mirrored.<br>
    <br>
-   <i>bool Background::is_complex_mirrored(); -</i> Return true if the background is both horizontally and vertically mirrored.<br>      
+   <i>bool Background::is_complex_mirrored(); -</i> Return true if the background is both horizontally and vertically mirrored.<br>
+   <br>
+   <i>bool Background::is_mirrored(); -</i> Return true if the background is mirrored in any way.<br>
    <br>
    <i>unsigned int Background::set_target(const unsigned int target); -</i> Set the target frame and return it.<br>
    <br>
@@ -2685,6 +2687,7 @@
    9.8.4: The parallax background subsystem has improved.<br>
    9.8.5: The base sprite subsystem has improved.<br>
    9.8.6-9.8.8: The small changes.<br>
+   9.8.9: The ordinary background subsystem has improved.<br>
   </big>
  </body>
 </html>
