--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -576,13 +576,13 @@
    <i>void Background::complex_mirror(); -</i> Set both the horizontal
    background mirroring mode and the vertical background mirroring mode.<br>
    <br>
-   <i>bool Background::is_horizontally_mirrored(); -</i> Return true if the background is horizontally mirrored.<br>
+   <i>bool Background::is_horizontally_mirrored const(); -</i> Return true if the background is horizontally mirrored.<br>
    <br>
-   <i>bool Background::is_vertically_mirrored(); -</i> Return true if the background is vertically mirrored.<br>
+   <i>bool Background::is_vertically_mirrored const(); -</i> Return true if the background is vertically mirrored.<br>
    <br>
-   <i>bool Background::is_complex_mirrored(); -</i> Return true if the background is both horizontally and vertically mirrored.<br>
+   <i>bool Background::is_complex_mirrored const(); -</i> Return true if the background is both horizontally and vertically mirrored.<br>
    <br>
-   <i>bool Background::is_mirrored(); -</i> Return true if the background is mirrored in any way.<br>
+   <i>bool Background::is_mirrored const(); -</i> Return true if the background is mirrored in any way.<br>
    <br>
    <i>unsigned int Background::set_target(const unsigned int target); -</i> Set the target frame and return it.<br>
    <br>
@@ -660,11 +660,13 @@
    <i>void Scene::complex_mirror(); -</i> Set both the horizontal background
    mirroring mode and the vertical background mirroring mode.<br>
    <br>
-   <i>bool Scene::is_horizontally_mirrored(); -</i> Return true if the background is horizontally mirrored.<br>
+   <i>bool Scene::is_mirrored const(); -</i> Return true if the background is mirrored in any way.<br>   
    <br>
-   <i>bool Scene::is_vertically_mirrored(); -</i> Return true if the background is vertically mirrored.<br>
+   <i>bool Scene::is_horizontally_mirrored const(); -</i> Return true if the background is horizontally mirrored.<br>
    <br>
-   <i>bool Scene::is_complex_mirrored(); -</i> Return true if the background is both horizontally and vertically mirrored.<br>
+   <i>bool Scene::is_vertically_mirrored const(); -</i> Return true if the background is vertically mirrored.<br>
+   <br>
+   <i>bool Scene::is_complex_mirrored const(); -</i> Return true if the background is both horizontally and vertically mirrored.<br>
    <br>
    <i>bool Scene::load(Image *background); -</i> Load a background from the buffer and return true if it is loaded.<br>
    <br>
@@ -725,11 +727,11 @@
    <i>void Parallax::complex_mirror(); -</i> Set both the horizontal
    background mirroring mode and the vertical background mirroring mode.<br>
    <br>   
-   <i>bool Parallax::is_horizontally_mirrored(); -</i> Return true if the background is horizontally mirrored.<br>
+   <i>bool Parallax::is_horizontally_mirrored const(); -</i> Return true if the background is horizontally mirrored.<br>
    <br>
-   <i>bool Parallax::is_vertically_mirrored(); -</i> Return true if the background is vertically mirrored.<br>
+   <i>bool Parallax::is_vertically_mirrored const(); -</i> Return true if the background is vertically mirrored.<br>
    <br>
-   <i>bool Parallax::is_complex_mirrored(); -</i> Return true if the background is both horizontally and vertically mirrored.<br>
+   <i>bool Parallax::is_complex_mirrored const(); -</i> Return true if the background is both horizontally and vertically mirrored.<br>
    <br>   
    <i>bool Parallax::load(Image *background); -</i> Load a background from the buffer and return true if it is loaded.<br>
    <i><br>
@@ -841,13 +843,13 @@
    <i>void Billboard::complex_mirror(); -</i> Set both the horizontal sprite
    mirroring mode and the vertical sprite mirroring mode.<br>
    <br>   
-   <i>bool Billboard::is_horizontally_mirrored(); -</i> Return true if the sprite is horizontally mirrored.<br>
+   <i>bool Billboard::is_horizontally_mirrored const(); -</i> Return true if the sprite is horizontally mirrored.<br>
    <br>
-   <i>bool Billboard::is_vertically_mirrored(); -</i> Return true if the sprite is vertically mirrored.<br>
+   <i>bool Billboard::is_vertically_mirrored const(); -</i> Return true if the sprite is vertically mirrored.<br>
    <br>
-   <i>bool Billboard::is_complex_mirrored(); -</i> Return true if the sprite is both horizontally and vertically mirrored.<br>
+   <i>bool Billboard::is_complex_mirrored const(); -</i> Return true if the sprite is both horizontally and vertically mirrored.<br>
    <br>   
-   <i>bool Billboard::is_mirrored(); -</i> Return true if the sprite is mirrored in any way.<br>
+   <i>bool Billboard::is_mirrored const(); -</i> Return true if the sprite is mirrored in any way.<br>
    <br>   
    <i>void Billboard::go_start(); -</i> Set the sprite position to the start position.<br>
    <br>
@@ -2688,6 +2690,7 @@
    9.8.5: The base sprite subsystem has improved.<br>
    9.8.6-9.8.8: The small changes.<br>
    9.8.9: The ordinary background subsystem has improved.<br>
+   9.9: The static background subsystem has improved.<br>
   </big>
  </body>
 </html>
