The rendering performance has increased

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2694,6 +2694,7 @@
    9.8.9: The ordinary background subsystem has improved.<br>
    9.9: The static background subsystem has improved.<br>
    9.9.1: The parallax background subsystem has improved.<br>
+   9.9.2: The rendering performance has increased.<br>
   </big>
  </body>
 </html>
