The small changes

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2695,6 +2695,7 @@
    9.9: The static background subsystem has improved.<br>
    9.9.1: The parallax background subsystem has improved.<br>
    9.9.2: The rendering performance has increased.<br>
+   9.9.3: The small changes.<br>
   </big>
  </body>
 </html>
