The base sprite subsystem has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2696,6 +2696,7 @@
    9.9.1: The parallax background subsystem has improved.<br>
    9.9.2: The rendering performance has increased.<br>
    9.9.3: The small changes.<br>
+   9.9.4: The base sprite subsystem has improved.<br>
   </big>
  </body>
 </html>
