The sprite sheet subsystem has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -959,7 +959,9 @@
    <i><br>
     bool Sheet::check_row(const unsigned int target) const; -</i> Return true if the target row is valid.<br>
    <br>
-   <i>bool Sheet::check_column(const unsigned int target) const; -</i> Return true if the target column is valid.<br>
+   <i>bool Sheet::check_column(const unsigned int target) const; -</i> Return true if the target column is valid.<br>   
+   <br>
+   <i>bool Sheet::check_cell(const unsigned int row, const unsigned int column) const; -</i> Return true if the target cell is valid.<br>   
    <i><br>
     unsigned int Sheet::get_row(const unsigned int target) const; -</i> Return row of the target frame.<br>
    <br>
@@ -2697,6 +2699,7 @@
    9.9.2: The rendering performance has increased.<br>
    9.9.3: The small changes.<br>
    9.9.4-9.9.5: The base sprite subsystem has improved.<br>
+   9.9.6-9.9.7: The sprite sheet subsystem has improved.<br>
   </big>
  </body>
 </html>
