--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2700,6 +2700,7 @@
    9.9.3: The small changes.<br>
    9.9.4-9.9.5: The base sprite subsystem has improved.<br>
    9.9.6-9.9.8: The sprite sheet subsystem has improved.<br>
+   9.9.9-10.1.1: The gamepad subsystem has improved.<br>
   </big>
  </body>
 </html>
