--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -263,6 +263,7 @@
    <li><big>Visual C++ 2017</big></li>
    <li><big>Visual C++ 2019</big></li>
    <li><big>Visual C++ 2022</big></li>
+   <li><big>Visual C++ 2026</big></li>
    <li><big>C++ Builder 2010</big></li>
    <li><big>C++ Builder XE</big></li>
    <li><big>C++ Builder XE2</big></li>
@@ -278,6 +279,8 @@
    <li><big>C++ Builder 10.3 Rio</big></li>
    <li><big>C++ Builder 10.4 Sydney</big></li>
    <li><big>C++ Builder 11 Alexandria</big></li>
+   <li><big>C++ Builder 12 Athens</big></li>
+   <li><big>C++ Builder 13 Florence</big></li>
   </ul>
   <h2><a id="mozTocId250267" class="mozTocH2"></a><big>Chapter 7. The platform-specific notes</big></h2>
   <big><u><br>
@@ -2701,6 +2704,7 @@
    9.9.4-9.9.5: The base sprite subsystem has improved.<br>
    9.9.6-9.9.8: The sprite sheet subsystem has improved.<br>
    9.9.9-10.1.1: The gamepad subsystem has improved.<br>
+   10.1.2: The tilemap subsystem has improved.<br>
   </big>
  </body>
 </html>
